2013-06-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* boot/scanner.boot (shoeToken): Allow inerts.
	* boot/ast.boot (bfInert): New.
	* boot/parser.boot (bpInert): New.
	(bpConstTok): Use it.

2013-06-18  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/compiler.boot (compHasFormat): Take a DB parameter.
	Adjust callers.
	* interp/define.boot (ICformat): Likewise.
	* interp/lisplib.boot (predicateBitIndex): Likewise.
	(predicateBitRef): Likewise.
	(transHasCode): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/catdef.spad.pamphlet (CommutativeOperatorCategory): New.
	(CommutativeOperation): Likewise.
	* algebra/Makefile.am (oa_algebra_layer_0): Include them.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (EltableAggregate): Weaken
	requirement on first parameter.
	(IndexedAggregate): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/catdef.spad.pamphlet (PartialDifferentialSpace): Weaken
	requirement on parameter.
	(PartialDifferentialRing): Likewise.
	(PartialDifferentialModule): Likewise.

2013-06-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/parsers.spad.pamphlet: New.
	* algebra/script-parser.spad: Move content to parsers.spad.pamphlet.
	Remove.
	* algebra/spad-parser.spad: Likewise.

2013-06-15  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/ht-util.boot (mkCurryFun): Import function name.

2013-06-15  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* boot/tokens.boot (importSymbol): New builtin.
	* interp/br-saturn.boot (htpMakeEmptyPage): Use it.

2013-06-15  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/database.boot (dbConstructorDefault): New accessor.
	(getCategoryConstructorDefault): New.
	* interp/define.boot (makeCategoryAlist): Use it.
	(hasDefaultPackage): Remove.
	(mkCategoryPackage): First parameter is now a DB.  Take
	environment parameter too.  Adjust caller.